Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6303

comparison between signed and unsigned integer expressions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • Lustre 2.7.0
    • None
    • 3
    • 17647

      This ticket is for cleanup patches that should remove warnings about comparison between signed and unsigned integer expressions.

      Some of them cause real issue in code.

            dmiter Dmitry Eremin (Inactive)
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: